# django-custom-admin-pages

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build_and_test.yml
admin_custom/: admin.py  apps.py  urls.py
admin_custom/tests/: test_custom_admin.py
admin_custom/tests/views/: test_system_notification_send_view.py
admin_custom/views/: __init__.py  admin_base_view.py  example_view.py
django_custom_admin_pages/: admin.py  app_settings.py  apps.py  boot_django.py  conftest.py  default_settings.py  exceptions.py  pytest.ini  urls.py
django_custom_admin_pages/templates/: base_custom_admin.html  example_view.html
django_custom_admin_pages/tests/: __init__.py  test_custom_admin_pages.py  test_urls.py
django_custom_admin_pages/views/: __init__.py  admin_base_view.py  example_view.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
test_proj/: asgi.py  settings.py  urls.py  wsgi.py
test_proj/another_test_app/: apps.py  views.py
test_proj/another_test_app/templates/: home.html
test_proj/test_app/: admin.py  models.py
test_proj/test_app/migrations/: 0001_initial.py
test_proj/test_app/views/: __init__.py  example_view.py
