[tool.poetry]
name = "django-custom-admin-pages"
version = "0.1.0"
description = "A django app that lets you add standard class-based views to the django admin index and navigation."
authors = ["lekjos"]
license = "BSD"
readme = "README.md"
homepage = "https://github.com/lekjos/django-custom-admin-pages"
repository = "https://github.com/lekjos/django-custom-admin-pages"
keywords = ["django", "django-admin", "django admin"]
classifiers = [
    "Environment :: Console",
    "Framework :: Django",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE.md",
]
packages = [{include = "django_custom_admin_pages"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"
pytest-cov = "^4.1.0"
pytest = "^7.4.0"
tox = "^4.6.4"
black = "^23.7.0"
pylint = "^2.17.5"
pylint-django = "^2.5.3"
isort = "^5.12.0"
coverage = "^7.2.7"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 310
src_paths =  ["src"]
include_trailing_comma = true
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["src"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]