[tool.poetry]
name = "django-custom-admin-pages"
version = "0.2.2"
description = "A django app that lets you add standard class-based views to the django admin index and navigation."
authors = ["lekjos"]
license = "BSD"
readme = "README.md"
homepage = "https://github.com/lekjos/django-custom-admin-pages"
repository = "https://github.com/lekjos/django-custom-admin-pages"
keywords = ["django", "django-admin", "django admin"]
classifiers = [
    "Environment :: Web Environment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Django :: 3.2", 
    "Topic :: Software Development :: Libraries :: Python Modules", 
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
include = [
    "LICENSE.md",
]
exclude = [
    "django_custom_admin_pages/boot_django.py",
    "django_custom_admin_pages/conftest.py",
    "django_custom_admin_pages/pytest.ini",
    "django_custom_admin_pages/test_proj",
    "django_custom_admin_pages/tests",
]
packages = [{include = "django_custom_admin_pages"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"

[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"
pytest-cov = "^4.1.0"
pytest = "^7.4.0"
tox = "^4.6.4"
black = "^23.7.0"
pylint = "^2.17.5"
pylint-django = "^2.5.3"
isort = "^5.12.0"
coverage = "^7.2.7"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 310
src_paths =  ["src"]
include_trailing_comma = true
profile = "black"
default_section = "THIRDPARTY"
known_first_party = ["src"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]